[gd_scene load_steps=5 format=3 uid="uid://b623lra3gl2pw"]

[ext_resource type="Script" uid="uid://c0vwnvrm5k58w" path="res://scripts/bullet.gd" id="1_v7oki"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v8qja"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4vbm"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_color = Color(0.95202, 1, 0.580135, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_2b2rl"]
material = SubResource("StandardMaterial3D_t4vbm")
top_radius = 0.1
bottom_radius = 0.15
height = 10.0

[node name="Bullet" type="Area3D"]
transform = Transform3D(2.8885e-05, 0.00766188, -0.999971, -0.999993, 0.00376994, 2.03739e-11, 0.00376983, 0.999964, 0.00766194, 0, 0, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_v7oki")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(4.87382e-05, 0.0139625, -1.99995, -1.99999, 0.00698127, 0, 0.0069811, 1.99994, 0.0139625, 0, 0, 0)
shape = SubResource("CylinderShape3D_v8qja")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.21845e-05, 0.00349061, -0.499988, -0.499997, 0.00174532, 0, 0.00174528, 0.499985, 0.00349064, 0, 0, 0)
mesh = SubResource("CylinderMesh_2b2rl")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
